--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       Hello
     </h1>
 
+    <div id="root"></div>
+
     <script type="module" src="./src/index.js"></script>
   </body>
 </html>
